Add right navbar elements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,59 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>Admin Dashboard</title>
 </head>
 <body>
-
+  <div class="navbar">
+    <div class="navigation" id="header">
+      <a href="#">
+        <span class="material-icons">dashboard</span>
+        <span class="text">Dashboard</span>
+      </a>
+    </div>
+    <div class="navigation-container">
+      <div class="navigation">
+        <a href="#">
+          <span class="material-icons">home</span>
+          <span>Home</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">portrait</span>
+          <span>Profiles</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">textsms</span>
+          <span>Messages</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">history</span>
+          <span>History</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">task</span>
+          <span>Tasks</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">groups</span>
+          <span>Communities</span>
+        </a>
+      </div>
+      <div class="navigation">
+        <a href="#">
+          <span class="material-icons">settings</span>
+          <span>Settings</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">help</span>
+          <span>Suppory</span>
+        </a>
+        <a href="#">
+          <span class="material-icons">verified_user</span>
+          <span>Privacy</span>
+        </a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
