--- a/index.html
+++ b/index.html
@@ -58,5 +58,13 @@
       </div>
     </div>
   </div>
+  <div class="main">
+    <div class="top-container"></div>
+    <div class="projects-container"></div>
+    <div class="right-container">
+      <div class="announcements-container"></div>
+      <div class="trending-container"></div>
+    </div>
+  </div>
 </body>
 </html>
