Add card content and styles

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
   <title>Admin Dashboard</title>
 </head>
 <body>
@@ -60,8 +61,75 @@
   </div>
   <div class="main">
     <div class="top-container"></div>
-    <div class="projects-container"></div>
-    <div class="right-container">
+    <div class="projects-container">
+      <div class="title">Your Projects</div>
+      <div class="project-cards-container">
+        <div class="card">
+          <div class="title">lorem ipsum</div>
+          <div class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Vivamus arcu felis bibendum ut tristique et egestas quis ipsum.
+            Quis lectus nulla at volutpat diam ut.
+          </div>
+          <div class="buttons">
+            <span class="material-icons">star_outline</span>
+            <span class="material-icons-outlined">notifications_off</span>
+            <span class="material-icons-outlined">share</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="title">Felis eget nunc lobortis.</div>
+          <div class="text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.
+            Risus quis varius quam quisque id diam vel quam elementum.
+          </div>
+          <div class="buttons">
+            <span class="material-icons">star_outline</span>
+            <span class="material-icons-outlined">notifications_off</span>
+            <span class="material-icons-outlined">share</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="title">diam vel quam</div>
+          <div class="text">
+            Ut aliquam purus sit amet luctus venenatis lectus magna.
+            Risus quis varius quam quisque id diam vel quam elementum.
+          </div>
+          <div class="buttons">
+            <span class="material-icons">star_outline</span>
+            <span class="material-icons-outlined">notifications_off</span>
+            <span class="material-icons-outlined">share</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="title">consequat interdum varius</div>
+          <div class="text">
+            Ut aliquam purus sit amet luctus venenatis lectus magna.
+            Risus quis varius quam quisque id diam vel quam elementum.
+          </div>
+          <div class="buttons">
+            <span class="material-icons">star_outline</span>
+            <span class="material-icons-outlined">notifications_off</span>
+            <span class="material-icons-outlined">share</span>
+          </div>
+        </div>
+        <div class="card">
+          <div class="title">Libero nunc consequat</div>
+          <div class="text">
+            Ut aliquam purus sit amet luctus venenatis lectus magna.
+            Risus quis varius quam quisque id diam vel quam elementum.
+          </div>
+          <div class="buttons">
+            <span class="material-icons">star_outline</span>
+            <span class="material-icons-outlined">notifications_off</span>
+            <span class="material-icons-outlined">share</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="right-container">
       <div class="announcements-container"></div>
       <div class="trending-container"></div>
     </div>
